<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#E6E6FA"
    android:padding="15dp"
    tools:context=".RegisterPage">

    <TextView
        android:layout_width="396dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#210062"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="394dp"
        android:layout_height="250dp"
        android:src="@drawable/student1" />

    <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    <EditText
            android:id="@+id/regNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/regNo" />

    <EditText
            android:id="@+id/PhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/PhoneNo" />

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#009FBD"
        android:text="@string/register" />

</LinearLayout>